--- a/less/mixins.less
+++ b/less/mixins.less
@@ -36,13 +36,20 @@
     font-family: 'Raleway', sans-serif;
     font-weight: 800; //extra bold
     font-size: 18pt;
-    margin: 0px 80px;
+    margin: 0px 30px;
     border-radius: 10px;
     width: 150px;
     height: 40px;
     border: none;
     background-color: @bgColor;
     color: @fontColor;
+
+    @media @tablet {
+        margin: 0px 70px;
+    }
+    @media @desktop {
+        margin: 0px 100px;
+    }
 
     &:hover {
         background-color:@fontColor;
